--- a/report/report.tex
+++ b/report/report.tex
@@ -49,5 +49,6 @@ First time is use 0.1 as varSigma, second time is 0.3 and third time is 0.5.\\
 We notice that with the noise larger it might increse amount of nodes.\\
 Finally, we notice that most of the progress will end around passed through 10 nodes.\\
 
+\section{Subtask 9}
 
 \end{document}
