--- a/report/report.tex
+++ b/report/report.tex
@@ -59,7 +59,7 @@ According to this, before the distribution converging to the real one, the numbe
 
 \section{Subtask 5}
 In machine learning, KL-divergence is used to measure the difference between two probability distributions in the same event space.We assume q(x) as the original distribution, p(x) is the assuming distribution that we used to match q(x).  When the two distribution get much closer, $log{\frac{q(x)}{p(x)}}$will be more equal to 1 and $KL(q(x)||p(x))$
-and $KL(p(x)||q(x))$ would get the same answer. However, when it comes to the scenario that $p(x=x_i)=0$ but $q(x=x_i)\neq0$, then $KL(q(x)||p(x))$ would goes infinite while $KL(p(x)||q(x))$ is 0, and in this case Kl-divergence is asymmetrical.
+and $KL(p(x)||q(x))$ would get the same answer. However, when it comes to the scenario that $p(x=x_i)=0$ but $q(x=x_i)\neq0$, then $KL(q(x)||p(x))$ would goes infinite while $KL(p(x)||q(x))$ is 0, and in this case KL-divergence is asymmetrical.
 
 \section{Subtask 9}
 
